--- a/src/app/applications/app-abscence/app-abscence.component.html
+++ b/src/app/applications/app-abscence/app-abscence.component.html
@@ -21,7 +21,7 @@
   <div class="row clearfix">
     <div class="card">
       <div class="header">
-        <h2>Mes Abscences</h2>
+        <h2>Vos Abscences</h2>
       </div>
       <div *ngIf="!loading && abscences?.length == 0" class="body">
         <div class="alert alert-primary">
