--- a/src/app/applications/app-formation/app-formation.component.html
+++ b/src/app/applications/app-formation/app-formation.component.html
@@ -96,6 +96,9 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
+            <div class="pull-right">
+              <button (click)="openModalSuppression(suppression, 'md', formation)" class="btn btn-danger"><i class="fa fa-trash"></i>Supprimer</button>
+            </div>
             <small>titre: </small><br>
             <h5 class="card-title">{{formation.titre}}</h5>
             <small>description: </small><br>
@@ -109,5 +112,20 @@
       </div>
     </div>
   </div>
+
+  <ng-template #suppression let-modal>
+    <div class="modal-header">
+      <h4 class="title" id="defaultModalLabel">Confirmation de suppression</h4>
+    </div>
+    <div class="modal-body">
+      Etes-vous sur de vouloir supprimer la Formation :
+      <br>
+      " {{selectionne.titre}} " ?
+    </div>
+    <div class="modal-footer">
+      <button type="button" (click)="deleteformation()" class="btn btn-danger">Oui, Supprimer</button>
+      <button type="button" class="btn btn-simple" data-dismiss="modal" (click)="modal.dismiss('Close click')">Fermer</button>
+    </div>
+  </ng-template>
 </div>
 
