--- a/src/app/blogs/blog-list/blog-list.component.html
+++ b/src/app/blogs/blog-list/blog-list.component.html
@@ -24,7 +24,7 @@
 						<h2>Nouveau Post</h2>
 					</div>
 					<div class="col-md-4">
-						<a href="">Post personnalisé</a>
+						<a [routerLink]="['/app/newfeed']">Post personnalisé</a>
 					</div>
 				</div>
 				<div class="body">
@@ -82,11 +82,11 @@
 							<img *ngIf="feed.user?.role == 'ROLE_PROFESSEUR' " [src]="getImage(feed.user)" class="rounded-circle user-photo" alt="User Profile Picture">
 						</a>
 						<a [routerLink]="feed.user?.role === 'ROLE_PROFESSEUR' || feed.user?.role === 'ROLE_ETUDIANT' ? ['/app/user/' + feed.user?.cin]: '' " >
-							<img *ngIf="feed.user?.role != 'ROLE_PROFESSEUR'" [src]="'http://gestionscolarite.com/assets/dist/img/avatar.png'" class="rounded-circle user-photo" alt="User Profile Picture" >
+							<img *ngIf="feed.user?.role != 'ROLE_PROFESSEUR'" src="assets/images/method-draw-image.svg" style="width: 50px;height: 50px;" class="rounded-circle user-photo" alt="User Profile Picture" >
 						</a>
 						<div class="dropdown">
 							<a [routerLink]="feed.user?.role === 'ROLE_PROFESSEUR' || feed.user?.role === 'ROLE_ETUDIANT' ? ['/app/user/' + feed.user?.cin]: '' " class="user-name">
-								<strong *ngIf="feed.user?.role == 'ROLE_PROFESSEUR' ">{{feed.user.gendre == 'male' ? 'Mr.' : 'Mme.'}}{{feed.user.nom}} {{feed.user.prenom}}</strong>
+								<strong *ngIf="feed.user?.role == 'ROLE_PROFESSEUR' ">{{feed.user.gendre == 'male' ? 'Mr.' : 'Mme.'}}{{feed.user.nom}} {{feed.user.prenom}} <span *ngIf="getcin() === feed.user.cin" class="badge badge-primary">c'est vous!</span></strong>
 								<strong *ngIf="feed.user?.role != 'ROLE_PROFESSEUR' ">Administration</strong>
 							</a>
 							<span class="datetime">{{ago(feed.date)}}</span>
@@ -109,7 +109,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-lg-4 col-md-12 right-box" >
+		<div class="col-lg-4 col-md-12 right-box">
 			<div class="card">
 				<div class="header">
 					<h2>Prochain(s) Examen(s)</h2>
@@ -120,14 +120,14 @@
 				<div class="body" *ngIf="!loading && devoirs.length == 0">
 					<div class="header">
 						<div class="alert alert-primary">
-							Aucun Devoir Trouvé
+							Aucun Examen Trouvé
 						</div>
 					</div>
 					<ul>
 						<li>
 							<div class="bullet pink"></div>
 							<div class="desc">
-								<a [routerLink]="['/app/calendrier/app-calendar']">Voir tous mes Examens</a>
+								<a [routerLink]="['/app/calendrier/app-calendar']">Voir tous vos Examens</a>
 							</div>
 						</li>
 					</ul>
@@ -160,7 +160,7 @@
 					</div>
 					<ul>
 						<li>
-							<a [routerLink]="['/app/calendrier/app-calendar']">Voir tous mes Examens</a>
+							<a [routerLink]="['/app/calendrier/app-calendar']">Voir tous vos Examens</a>
 						</li>
 					</ul>
 				</div>
