--- a/src/app/pages/page-profile/page-profile.component.html
+++ b/src/app/pages/page-profile/page-profile.component.html
@@ -8,11 +8,11 @@
 						<i class="fa fa-arrow-left" *ngIf="sidebarVisible"></i>
 						<i class="fa fa-arrow-right" *ngIf="!sidebarVisible"></i>
 					</a>
-					Mon Profile
+					Mon Profil
 				</h2>
 				<ul class="breadcrumb">
 					<li class="breadcrumb-item"><a [routerLink]="['/app']"><i class="icon-home"></i></a></li>
-					<li class="breadcrumb-item active">Mon Profile</li>
+					<li class="breadcrumb-item active">Mon Profil</li>
 				</ul>
 			</div>
 		</div>
@@ -62,8 +62,8 @@
 		<div class="col-lg-8 col-md-12">
 			<div class="card">
 				<div class="header">
-					<h3 *ngIf="getRole(me) === 'Etudiant' ">Mes Camarades</h3>
-					<h3 *ngIf="getRole(me) === 'Professeur' ">Mes Collègues</h3>
+					<h3 *ngIf="getRole(me) === 'Etudiant' ">Vos Camarades</h3>
+					<h3 *ngIf="getRole(me) === 'Professeur' ">Vos Collègues</h3>
 				</div>
 				<div class="body">
 					<div class="row">
