--- a/src/app/applications/app-demande/app-demande.component.html
+++ b/src/app/applications/app-demande/app-demande.component.html
@@ -19,6 +19,46 @@
   </div>
 
   <div class="row clearfix">
+    <div class="col-lg-12 col-md-12">
+      <div class="card">
+        <div *ngIf="demandes.length == 0" class="body">
+          Vos Demandes
+          <hr>
+          <div class="alert alert-primary">
+            Vous n'avez aucune Demande
+          </div>
+        </div>
+        <div *ngIf="demandes.length > 0" class="body table-responsive">
+          Vos Demandes
+          <!--<div class="pull-right">-->
+          <!--<button class="btn btn-danger" (click)="openModalToutSupprimer(toutsupprimer, 'md')">Tout Supprimer</button>-->
+          <!--</div>-->
+          <hr>
+          <table class="table table-hover m-b-0" style="border-top-style: hidden;">
+            <thead>
+            <tr>
+              <th>Date</th>
+              <th>Type</th>
+              <th>status</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let demande of demandes">
+              <td>
+                {{demande.created_at}}
+              </td>
+              <td>
+                {{demande.type}}
+              </td>
+              <td>
+                <span class="badge badge-warning">En Cours</span>
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
     <div class="col-lg-6 col-md-12">
       <div class="card">
         <div class="header">
@@ -98,6 +138,5 @@
         </div>
       </div>
     </div>
-
   </div>
 </div>
