--- a/src/app/blogs/blog-list/blog-list.component.html
+++ b/src/app/blogs/blog-list/blog-list.component.html
@@ -98,6 +98,7 @@
 					<h3>
 						<a [routerLink]="['/app/singlefeed/' + feed.slug]">{{feed.titre}}</a>
 					</h3>
+					<!--<div class="text-blog-cop" [innerHTML]="feed.contenu" ></div>-->
 				</div>
 				<div class="footer">
 					<div class="actions">
