--- a/src/app/pages/page-profile/page-profile.component.html
+++ b/src/app/pages/page-profile/page-profile.component.html
@@ -24,7 +24,7 @@
 			<div class="card profile-header">
 				<div class="body">
 					<div class="profile-image">
-						<img style="width: 250px;height: 250px;object-fit: cover;" [src] = "getImage(me)" class="rounded-circle" style="max-width: 250px" alt="User Image">
+						<img [src] = "getImage(me)" class="rounded-circle" style="width: 250px;height: 250px;object-fit: cover;" alt="User Image">
 					</div>
 					<div>
 						<h4 class="m-b-0">
