--- a/src/app/applications/app-formation/app-formation.component.html
+++ b/src/app/applications/app-formation/app-formation.component.html
@@ -73,7 +73,7 @@
   <div class="row" *ngIf="!loading && getRole() == 'ROLE_PROFESSEUR'" >
     <div class="card">
       <div class="body">
-        <a class="btn btn-primary btn-block" [routerLink]="['/app/addformation']">
+        <a class="btn btn-primary btn-simple" [routerLink]="['/app/addformation']">
           Ajouter une Formation
         </a>
       </div>
@@ -97,6 +97,7 @@
         <div class="col-md-8">
           <div class="card-body">
             <div class="pull-right">
+              <a href="#" class="btn btn-primary m-r-10"><i class="fa fa-pencil" style="padding-right: 5px;"></i>Modifier</a>
               <button (click)="openModalSuppression(suppression, 'md', formation)" class="btn btn-danger"><i class="fa fa-trash" style="padding-right: 5px;"></i>Supprimer</button>
             </div>
             <small>titre: </small><br>
@@ -112,7 +113,7 @@
                 <a [routerLink]="['/app/user/' + etudiant.cin]"><img [src]="getImage(etudiant)" alt="image etudiant"></a>
               </li>
             </ul>
-            <a [routerLink]="['/app/formations/' + formation.slug]" class="btn btn-primary">Plus de Détails</a>
+            <a [routerLink]="['/app/formations/' + formation.slug]" class="btn btn-info">Plus de Détails</a>
           </div>
         </div>
       </div>
