--- a/src/app/applications/app-calendar/app-calendar.component.html
+++ b/src/app/applications/app-calendar/app-calendar.component.html
@@ -19,7 +19,7 @@
 		<div class="col-lg-12">
 			<div *ngIf="getRole() == 'ROLE_PROFESSEUR' " class="card">
 				<div class="body">
-					<button type="button" class="btn btn-primary btn-block"
+					<button type="button" class="btn btn-primary btn-simple"
 							data-toggle="modal"
 							data-target="#addevent"
 							(click)="openModal(content,'md')">
