--- a/src/app/blogs/file-upload/file-upload.component.html
+++ b/src/app/blogs/file-upload/file-upload.component.html
@@ -2,7 +2,7 @@
   <img [src]="imgURL" width="200" *ngIf="imgURL" class="img-thumbnail" style="display: list-item">
   <br>
   <span class="fake-btn"><i class="fa fa-picture-o"></i></span>
-  <span class="file-msg">{{file ? file.name : 'or drag and drop file here' }}</span>
+  <span class="file-msg">{{file ? file.name : 'ou glissez et déposez le fichier ici' }}</span>
   <input [accept]="type + '/*'" class="file-input" type="file">
 </div>
 <app-progress [progress]="progress"></app-progress>
